# understand-everything

./: .gitignore  README.md  pyproject.toml
assets/: index.html
output/Megatron-LM/website-2025-12-09/: index.html
output/Megatron-LM/website-2025-12-09/explanations/examples/academic_paper_scripts/: README.html
output/Megatron-LM/website-2025-12-09/explanations/examples/post_training/: README.html
output/Megatron-LM/website-2025-12-09/explanations/megatron/core/inference/communication/: README.html
output/Megatron-LM/website-2025-12-09/explanations/tests/functional_tests/test_cases/bert/: README.html
output/Megatron-LM/website-2025-12-09/explanations/tests/functional_tests/test_cases/common/: README.html
output/Megatron-LM/website-2025-12-09/explanations/tests/functional_tests/test_cases/gpt-nemo/: README.html
output/Megatron-LM/website-2025-12-09/explanations/tests/test_utils/: README.html
output/verl/website-2025-12-09/: app.js  index.html
output/verl/website-2025-12-09/explanations/examples/: README.html
output/verl/website-2025-12-09/explanations/examples/tuning/: README.html
output/verl/website-2025-12-09/explanations/examples/tutorial/: README.html
output/verl/website-2025-12-09/explanations/tests/experimental/: README.html
output/verl/website-2025-12-09/explanations/tests/special_e2e/envs/: README.html
scripts/: README.md  s1_explain_files.py  s1_repo_heatmap_tree.py  s3_explain_files.py  s3_website.py  s4_generate_readme.py  s5_website.py
utils/: s0_add_timestamps.py  s2_analyze_stats.py
(+7 files in other folders)
